force-app/main/default/objects/ampi__Activity__c/ampi__Activity__c.object-meta.xml
<CustomObject>
    <label>Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>