force-app/main/default/objects/ampi__Activity__c/fields/Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID__c</fullName>
    <label>Activity ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>