force-app/main/default/objects/ampi__Activity__c/fields/Activity_Number_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_Number_ID__c</fullName>
    <formula>IF(ISNUMBER(Activity_ID__c), VALUE(Activity_ID__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Number ID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>