force-app/main/default/objects/ampi__Activity__c/fields/ampi__Activity_Information__c.field-meta.xml
<CustomField>
    <fullName>ampi__Activity_Information__c</fullName>
    <description>Long text area for any additional details or information that needs to be tracked for an Activity__c.</description>
    <label>Activity Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>