force-app/main/default/objects/ampi__Activity__c/fields/ampi__Contact__c.field-meta.xml
<CustomField>
    <fullName>ampi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field is used to to associate Activity records with a Contact.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>