force-app/main/default/objects/ampi__Activity__c/fields/ampi__Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description__c</fullName>
    <description>This long text field is used to store additional details about this Activity.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>