force-app/main/default/objects/ampi__Activity__c/fields/ampi__Duration__c.field-meta.xml
<CustomField>
    <fullName>ampi__Duration__c</fullName>
    <description>This formula field calculates the difference between the actual end date and the actual start date of an activity.</description>
    <formula>IF (
    OR(
        ISNULL(ampi__Actual_Start_Date__c),
        ISNULL(ampi__Actual_End_Date__c)
    ),
    0,
    IF (
        AND(
            NOT(ISNULL(ampi__Actual_Start_Date__c)),
            NOT(ISNULL(ampi__Actual_End_Date__c))
        ),
        IF (
            ampi__Actual_Start_Date__c == ampi__Actual_End_Date__c,
            1,
            (ampi__Actual_End_Date__c - ampi__Actual_Start_Date__c) + 1
        ),
        null
    )
)</formula>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>