force-app/main/default/objects/ampi__Activity__c/fields/ampi__Earliest_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Earliest_Start_Date__c</fullName>
    <description>Formula field to return the earliest date value between Planned Start Date and Actual Start Date.</description>
    <formula>IF(TEXT(ampi__xx_Activity_Type__c) ==  $Label.ampi__ACTIVITY_TYPE_TASK,
    IF(
        AND(
            ISBLANK(ampi__Planned_Start_Date__c),
            ISBLANK(ampi__Actual_Start_Date__c)
        ),
        NULL,
        IF(
            AND(
                NOT(ISBLANK(ampi__Planned_Start_Date__c)),
                NOT(ISBLANK(ampi__Actual_Start_Date__c))
            ),
            ampi__Actual_Start_Date__c,
            BLANKVALUE(ampi__Actual_Start_Date__c, ampi__Planned_Start_Date__c)
        )
    ),
    ampi__xx_Due_Date__c
)</formula>
    <label>Earliest Start Date</label>
    <type>Date</type>
</CustomField>