force-app/main/default/objects/ampi__Activity__c/fields/ampi__Implementation_Plan__c.field-meta.xml
<CustomField>
    <fullName>ampi__Implementation_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to associate an Activity with an Implementation Plan. This field must be populated for an Activity record to display on the ActivityChart Lightning Component.</description>
    <label>Implementation Plan</label>
    <referenceTo>ampi__Implementation_Plan__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>