force-app/main/default/objects/ampi__Activity__c/fields/ampi__Location__c.field-meta.xml
<CustomField>
    <fullName>ampi__Location__c</fullName>
    <description>This text field is used to store the geographic location for an Activity.</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>