force-app/main/default/objects/ampi__Activity__c/fields/ampi__Parent_Activity__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field looks up to a parent activity to create a hierarchy of activities.</description>
    <inlineHelpText>For sub-activities, please select the related main activities (needs to be entered before). For main activities, please select &quot;none / main activity.</inlineHelpText>
    <label>Parent Activity</label>
    <referenceTo>ampi__Activity__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>