force-app/main/default/objects/ampi__Activity__c/fields/ampi__Parent_Ids__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Ids__c</fullName>
    <description>This formula field contains the record IDs of all the parent activites separated by # and ordered by hierarchy. This field is used by the ActivityChart Lightning Component to correctly display Activities within the hierarchy.</description>
    <formula>IF(
  ISBLANK(ampi__Parent_Activity__c),
  null,
  IF(
      ISBLANK(ampi__Parent_Activity__r.ampi__Parent_Activity__c),
      ampi__Parent_Activity__c,
      IF(
      ISBLANK(ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c),
      ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__c,
      IF(
        ISBLANK(ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c),
        ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__c,
        IF(
          ISBLANK(ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c),
          ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__c,
          IF(
            ISBLANK(ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c),
            ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__c,
            IF(
              ISBLANK(ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c),
              ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__c,
              IF(
                ISBLANK(ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c),
                ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__r.ampi__Parent_Activity__c + &quot;#&quot; + ampi__Parent_Activity__c,
                null                    
                )
              )
            )
          )
        )
      )
    )
  )</formula>
    <label>Parent Ids</label>
    <type>Text</type>
</CustomField>