force-app/main/default/objects/ampi__Activity__c/fields/ampi__Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>ampi__Percent_Complete__c</fullName>
    <description>The Percent Complete field contains the current status of a task, expressed as the percentage of the task&apos;s duration that has been completed.</description>
    <inlineHelpText>Percentage of work that has been completed for an Activity</inlineHelpText>
    <label>Percent Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>