force-app/main/default/objects/ampi__Activity__c/fields/ampi__Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Planned_Start_Date__c</fullName>
    <description>This field tracks the planned start date of an activity. If populated, it will display in the Gantt chart on the ActivityChart Lightning Component.</description>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>