force-app/main/default/objects/ampi__Activity__c/fields/ampi__Project_Implementation_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Implementation_Plan_Name__c</fullName>
    <description>Formula field to concatenate Project Name and Implementation Plan Name for search layouts.</description>
    <formula>ampi__Implementation_Plan__r.ampi__Project__r.Name &amp; &quot; - &quot; &amp; ampi__Implementation_Plan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Implementation Plan Name</label>
    <type>Text</type>
</CustomField>