force-app/main/default/objects/ampi__Activity__c/fields/ampi__Project_Indicator__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Indicator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect Activities to a Project Indicator.</description>
    <label>Project Indicator</label>
    <referenceTo>ampi__Project_Indicator__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>