force-app/main/default/objects/ampi__Activity__c/fields/ampi__Project_Objective__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect Activities to a Project Objective.</description>
    <label>Framework Objective</label>
    <referenceTo>ampi__Objective__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>