force-app/main/default/objects/ampi__Activity__c/fields/ampi__Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__Status__c</fullName>
    <description>Picklist field to track the status and progress of an Activity. This field is unrestricted and can be modified by subscribers.</description>
    <inlineHelpText>Changing the status of activities from &quot;new&quot; to either &quot;planning&quot;, &quot;in progress&quot;, &quot;delayed&quot; or &quot;completed&quot; will trigger a synchronization to D365 IF the activity belongs to either the following (budgeting) year or to current year.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ampi__xx_Activity_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Cancelled/NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>