force-app/main/default/objects/ampi__Activity__c/fields/ampi__Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Type__c</fullName>
    <description>This field enables users to track the different types of activities. This field is unrestricted and can be modified by subscribers.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Results-Based</fullName>
                <default>true</default>
                <label>Results-Based</label>
            </value>
            <value>
                <fullName>Overarching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>