force-app/main/default/objects/ampi__Activity__c/fields/ampi__xx_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Activity_Type__c</fullName>
    <description>This field enables users to track activities as either tasks or milestones, which then affects the display of the activity in the Gantt Chart in the Lightning Web Component. This field is restricted; any new values added will not affect the display of the component.</description>
    <inlineHelpText>This field enables users to track activities as either tasks or milestones.</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
                <default>true</default>
                <label>Task</label>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>