force-app/main/default/objects/ampi__Activity__c/fields/ampi__xx_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Disbursement to link any activity milestones that are required to be met for funding to be disbursed.</description>
    <label>Disbursement</label>
    <referenceTo>ampi__Disbursement__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>