force-app/main/default/objects/ampi__Activity__c/fields/ampi__xx_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Due_Date__c</fullName>
    <description>This field is used to mark the due date for milestone activities. This field is only available for milestone activities and, when populated, affects the display of the Gantt Chart in the Lightning Web Component.</description>
    <inlineHelpText>This field is used to mark the due date for milestone activities</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>