force-app/main/default/objects/ampi__Activity__c/fields/Deadlines__c.field-meta.xml
<CustomField>
    <fullName>Deadlines__c</fullName>
    <label>Deadlines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>