force-app/main/default/objects/ampi__Activity__c/fields/Expenditure_to_date__c.field-meta.xml
<CustomField>
    <fullName>Expenditure_to_date__c</fullName>
    <label>Expenditure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>