force-app/main/default/objects/ampi__Activity__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <formula>IF(TEXT(ampi__Type__c) = &quot;Overarching&quot;,
			IF(NOT(ISBLANK(ampi__Parent_Activity__c)), ampi__Parent_Activity__r.Activity_ID__c &amp; &quot;.&quot;, &quot;&quot;) &amp; Activity_ID__c,
			ampi__Project_Objective__r.Order_ID__c &amp; &quot;.&quot; &amp; IF(NOT(ISBLANK(ampi__Parent_Activity__c)), ampi__Parent_Activity__r.Activity_ID__c &amp; &quot;.&quot;, &quot;&quot;) &amp; Activity_ID__c
)</formula>
    <label>Order ID</label>
    <type>Text</type>
</CustomField>