force-app/main/default/objects/ampi__Activity__c/fields/Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record__c</fullName>
    <formula>IF(
NOT(ISBLANK(ampi__Project_Objective__c)), HYPERLINK(&quot;/&quot; &amp; ampi__Project_Objective__c,  ampi__Project_Objective__r.ampi__Label__c),
IF(
NOT(ISBLANK(ampi__Parent_Activity__c)), HYPERLINK(&quot;/&quot; &amp; ampi__Parent_Activity__c, &quot;Activity &quot; &amp; ampi__Parent_Activity__r.Name),
&quot;N/A&quot;)
)</formula>
    <inlineHelpText>For sub-activities, please select the related main activities (needs to be entered before). For main activities, please select &quot;none / main activity..</inlineHelpText>
    <label>Parent Record</label>
    <type>Text</type>
</CustomField>