force-app/main/default/objects/ampi__Activity__c/fields/Person_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Person_Responsible__c</fullName>
    <label>Person Responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>