force-app/main/default/objects/ampi__Activity__c/fields/Person_Responsible_Link__c.field-meta.xml
<CustomField>
    <fullName>Person_Responsible_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Responsible Link</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>