force-app/main/default/objects/ampi__Activity__c/fields/Persons_Involved__c.field-meta.xml
<CustomField>
    <fullName>Persons_Involved__c</fullName>
    <label>Persons Involved</label>
    <type>TextArea</type>
</CustomField>