force-app/main/default/objects/ampi__Activity__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DO NOT EDIT MANUALLY - This lookup field is set by automation as it is needed for the basis of a Sharing Set in order to share edit access with MA Portal users.</description>
    <inlineHelpText>DO NOT EDIT MANUALLY - This lookup field is set by automation as it is needed for the basis of a Sharing Set in order to share edit access with MA Portal users.</inlineHelpText>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>