force-app/main/default/objects/ampi__Activity__c/fields/Thematic_Area__c.field-meta.xml
<CustomField>
    <fullName>Thematic_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>ampi__Thematic_Area__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>