force-app/main/default/objects/ampi__Activity__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <formula>IF(Project__c &lt;&gt; &apos;&apos;, Project__r.Project_Number_ID__c, IF(ampi__Implementation_Plan__r.ampi__Project__c &lt;&gt; &apos;&apos;, ampi__Implementation_Plan__r.ampi__Project__r.Project_Number_ID__c, &apos;NO_PROJECT&apos;)) + CASE(ampi__Type__c, &apos;Results-Based&apos;, &apos;_RA&apos;, &apos;Overarching&apos;, &apos;_OA&apos;, &apos;&apos;) + &apos;_&apos; + 
IF(TEXT(ampi__Type__c) == &apos;Results-Based&apos;,  
    IF (ISBLANK(ampi__Parent_Activity__c), 
        (ampi__Project_Objective__r.Order_ID__c  + &apos;_&apos; + Order_ID__c + &apos; &apos;),
        (ampi__Parent_Activity__r.Order_ID__c + &apos;_&apos; + Order_ID__c + &apos; &apos;)), &apos;&apos;) + 
IF(TEXT(ampi__Type__c) == &apos;Overarching&apos;,  
    IF (ampi__Parent_Activity__c &lt;&gt; &apos;&apos;, 
        (ampi__Parent_Activity__r.Order_ID__c + &apos;_&apos; + Order_ID__c),
							  Order_ID__c), &apos;&apos;)</formula>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>