force-app/main/default/objects/ampi__Activity__c/validationRules/Construction_Activities_Service_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Construction_Activities_Service_Type</fullName>
    <active>false</active>
    <description>The Service type cannot be changed after the Project Status &quot;In Construction&quot; for Humanitarian projects</description>
    <errorConditionFormula>AND(
				ISCHANGED(Thematic_Area__c),
				Project__r.RecordType.DeveloperName  = &apos;Construction&apos;,
				OR(
				ISPICKVAL(Project__r.ampi__Project_Status__c  , &apos;In Construction&apos;),
				ISPICKVAL(Project__r.ampi__Project_Status__c  , &apos;Closure&apos;),				
    ISPICKVAL(Project__r.Phase__c , &apos;Implementation&apos;),
    ISPICKVAL(Project__r.Phase__c , &apos;Closure&apos;) 
    )
)</errorConditionFormula>
    <errorMessage>The Service type cannot be modified after the &quot;Project Status&quot;: &quot;In Construction&quot;</errorMessage>
</ValidationRule>