force-app/main/default/objects/ampi__Activity__c/validationRules/Humanitarian_Activities_Service_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Humanitarian_Activities_Service_Type</fullName>
    <active>false</active>
    <description>The Service type cannot be changed after the Project Status &quot;Plan submitted&quot; for Humanitarian projects</description>
    <errorConditionFormula>AND(
				ISCHANGED(Thematic_Area__c),
				Project__r.RecordType.DeveloperName  = &apos;Emergency_Response&apos;,
				OR(
				ISPICKVAL(Project__r.ampi__Project_Status__c  , &apos;Plan submitted&apos;),				
				ISPICKVAL(Project__r.ampi__Project_Status__c  , &apos;In Implementation&apos;),
    ISPICKVAL(Project__r.Phase__c , &apos;Implementation&apos;),
    ISPICKVAL(Project__r.Phase__c , &apos;Closure&apos;) 
    )
)</errorConditionFormula>
    <errorMessage>The Service type cannot be modified after the &quot;Project Status&quot;: &quot;Plan submitted&quot;</errorMessage>
</ValidationRule>