force-app/main/default/objects/ampi__Activity__c/validationRules/No_PRS_And_ServiceType_For_Overarching.validationRule-meta.xml
<ValidationRule>
    <fullName>No_PRS_And_ServiceType_For_Overarching</fullName>
    <active>false</active>
    <description>Overarching activities do not have Project Result statement and Service Type assigned</description>
    <errorConditionFormula>TEXT(ampi__Type__c) == &quot;Overarching&quot; &amp;&amp; (ampi__Project_Objective__c &lt;&gt; &apos;&apos; || Thematic_Area__c &lt;&gt; &apos;&apos;)</errorConditionFormula>
    <errorMessage>Overarching activities do not have Project Result statement and Service Type assigned</errorMessage>
</ValidationRule>