force-app/main/default/objects/ampi__Activity__c/validationRules/Proj_Ind_Project_Equals_Activity_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Proj_Ind_Project_Equals_Activity_Project</fullName>
    <active>false</active>
    <description>The Project on the Project Indicator must match the Project on the Implementation Plan of the Activity</description>
    <errorConditionFormula>ampi__Project_Indicator__r.ampi__Project__c  &lt;&gt;  ampi__Implementation_Plan__r.ampi__Project__c</errorConditionFormula>
    <errorMessage>Please select a Project Indicator from the Project on which you are working</errorMessage>
</ValidationRule>