force-app/main/default/objects/ampi__Activity__c/validationRules/PRS_Mandatory_ResultsBased.validationRule-meta.xml
<ValidationRule>
    <fullName>PRS_Mandatory_ResultsBased</fullName>
    <active>false</active>
    <description>Project Result Statement should be implemented only for Results-Based</description>
    <errorConditionFormula>TEXT(ampi__Type__c) == &quot;Results-Based&quot; &amp;&amp; (ampi__Project_Objective__c == &apos;&apos;)</errorConditionFormula>
    <errorMessage>Project Result Statement should be implemented only for Results-Based</errorMessage>
</ValidationRule>