force-app/main/default/objects/ampi__Activity__c/validationRules/Service_Type_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Type_Mandatory</fullName>
    <active>false</active>
    <description>An Activity must have a Service Type when is created or edited</description>
    <errorConditionFormula>AND(
    ISPICKVAL(ampi__Type__c, &apos;Results-Based&apos;),
				OR(
				ISNULL(Thematic_Area__c),
    ISBLANK(Thematic_Area__c) 
    ),
			 OR(
				Project__r.RecordType.DeveloperName = &apos;Grant&apos;,
    Project__r.RecordType.DeveloperName = &apos;Transition&apos;,
				Project__r.RecordType.DeveloperName = &apos;Standard&apos;,
				Project__r.RecordType.DeveloperName = &apos;Emergency_Response&apos;,
				Project__r.RecordType.DeveloperName = &apos;Construction&apos;
				)
)</errorConditionFormula>
    <errorMessage>The Activity must have a Service Type assigned.</errorMessage>
</ValidationRule>